Added angular controllers for delete/destroy

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -28,6 +28,7 @@ html(ng-app="myApp")
     script(src='js/controllers/ContactsEditCtrl.js')
     script(src='js/controllers/ContactsIndexCtrl.js')
     script(src='js/controllers/ContactsShowCtrl.js')
+    script(src='js/controllers/ContactsDestroyCtrl.js')
     script(src='js/controllers/MainCtrl.js')
     script(src='js/filters.js')
     script(src='js/directives.js')
