--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -2,14 +2,12 @@ h3 Contacts
 
 table.table.table-striped
   thead
-    td Id
     td First Name
     td Last Name
     td Age
-    td Actions
+    td(colspan="3") Actions
   tbody
     tr(ng-repeat="contact in contacts")
-      td {{contact._id}}
       td {{contact.firstname}}
       td {{contact.lastname}}
       td {{contact.age}}
@@ -17,5 +15,7 @@ table.table.table-striped
         a(href="/contacts/{{contact._id}}") Show
       td
         a(href="/contacts/{{contact._id}}/edit") Edit
+      td
+        a(href="/contacts/{{contact._id}}/delete") Delete
 
 button.btn.btn-success(ng-click="new()") New Contact
