Small layout change.

--- a/views/partials/show.jade
+++ b/views/partials/show.jade
@@ -1,14 +1,14 @@
 h3 Contact Details
 
 div
-  h5 First Name
-    {{contact.firstname}}
-
-  h5 Last Name
-    {{contact.lastname}}
-
-  h5 Age
-    {{contact.age}}
+  h5(style="display:inline-block;width:150px") First Name
+  span {{contact.firstname}}
+  div
+  h5(style="display:inline-block;width:150px") Last Name
+  span {{contact.lastname}}
+  div
+  h5(style="display:inline-block;width:150px") Age
+  span {{contact.age}}
 
 hr
 
