--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,7 +10,7 @@ html(ng-app="myApp")
     div.navbar.navbar-fixed-top
       div.navbar-inner
         div.container
-          a.brand(href="/") Contacts
+          a.brand(href="/") Employees
 
     div.container
       div.row
@@ -25,10 +25,10 @@ html(ng-app="myApp")
     script(src='js/lib/angular/angular-resource.js')
     script(src='js/app.js')
     script(src='js/services.js')
-    script(src='js/controllers/ContactsEditCtrl.js')
-    script(src='js/controllers/ContactsIndexCtrl.js')
-    script(src='js/controllers/ContactsShowCtrl.js')
-    script(src='js/controllers/ContactsDestroyCtrl.js')
+    script(src='js/controllers/EmployeesEditCtrl.js')
+    script(src='js/controllers/EmployeesIndexCtrl.js')
+    script(src='js/controllers/EmployeesShowCtrl.js')
+    script(src='js/controllers/EmployeesDestroyCtrl.js')
     script(src='js/controllers/MainCtrl.js')
     script(src='js/filters.js')
     script(src='js/directives.js')
