--- a/views/partials/edit.jade
+++ b/views/partials/edit.jade
@@ -1,10 +1,21 @@
 h3 Employee Details
 
 form.form-horizontal(name="form", ng-submit="submit()", novalidate)
+
+ .control-group(ng-class="errorClass('department')")
+    label.control-label(for="firstname") Department
+    .controls
+      select(ng-model="employee.departmentId", name="department", require, ng-options="department._id as department.name for department in departments", autofocus)
+
+ .control-group(ng-class="errorClass('pno')")
+    label.control-label(for="age") P-number
+    .controls
+      input(ng-model="employee.pno", type="number", name="pno", placeholder="P-number", require)
+
   .control-group(ng-class="errorClass('firstname')")
     label.control-label(for="firstname") First Name
     .controls
-      input(ng-model="employee.firstname", type="text", name="firstname", placeholder="First Name", require, autofocus)
+      input(ng-model="employee.firstname", type="text", name="firstname", placeholder="First Name", require)
 
   .control-group(ng-class="errorClass('lastname')")
     label.control-label(for="lastname") Last Name
@@ -14,7 +25,13 @@ form.form-horizontal(name="form", ng-submit="submit()", novalidate)
   .control-group(ng-class="errorClass('age')")
     label.control-label(for="age") Age
     .controls
-      input(ng-model="employee.age", type="text", name="age", placeholder="Age Name", require)
+      input(ng-model="employee.age", type="number", name="age", placeholder="Age Name", require)
+
+  .control-group(ng-class="errorClass('salary')")
+    label.control-label(for="salary") Salary
+    .controls
+      input(ng-model="employee.salary", type="number", name="salary", placeholder="Monthly salary", require)
+
 
   .control-group
     .controls
