--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -2,15 +2,21 @@ h3 Employees
 
 table.table.table-striped
   thead
+    td P-number
     td First Name
     td Last Name
     td Age
+    td Salary
+    td Department
     td Actions
   tbody
     tr(ng-repeat="employee in employees")
+      td {{employee.pno}}
       td {{employee.firstname}}
       td {{employee.lastname}}
       td {{employee.age}}
+      td {{employee.salary}}
+      td {{employee.department}}
       td
         a(href="/employees/{{employee._id}}") Show
         span(style="display:inline-block;width:20px")
