--- a/views/partials/show.jade
+++ b/views/partials/show.jade
@@ -1,6 +1,15 @@
 h3 Contact Details
 
 div
+  h5(style="display:inline-block;width:150px") Department
+  span {{employee.department}}
+  div
+  h5(style="display:inline-block;width:150px") P-number
+  span {{employee.pno}}
+  div
+  h5(style="display:inline-block;width:150px") Age
+  span {{employee.age}}
+  div
   h5(style="display:inline-block;width:150px") First Name
   span {{employee.firstname}}
   div
