connecting departments to GUI

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,6 +27,7 @@ html(ng-app="myApp")
     script(src='js/services.js')
     script(src='js/controllers/EmployeesEditCtrl.js')
     script(src='js/controllers/EmployeesIndexCtrl.js')
+    script(src='js/controllers/EmployeesDepartmentCtrl.js')
     script(src='js/controllers/EmployeesShowCtrl.js')
     script(src='js/controllers/EmployeesDestroyCtrl.js')
     script(src='js/controllers/MainCtrl.js')
